fix with padding because box model collapses margin
Former-commit-id: 27ff1d8fae04e6cce0094cffeb9e89a5bdbc58a9

--- a/issues/great-escape/assets/custom.scss
+++ b/issues/great-escape/assets/custom.scss
@@ -388,7 +388,7 @@
     }
 
     #summary {
-      margin-top: 310px;
+      padding-top: 350px;
       font-size: 18px;
     }
 
